# Runes

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  Runes.pro
Docs/: SkylanderFormat.md
Resources/: runes.csv  runes.yaml  salt.txt
cmake/: FindFmtLib.cmake  FindHidApi.cmake  FindLibUSB.cmake  FindYamlCpp.cmake
include/: Constants.hpp  EElementType.hpp  ESkylandersGame.hpp  FigureTabWidget.hpp  PortalAlgos.hpp  PortalDebuggerWidget.hpp  PortalTag.hpp  RfidTag.hpp  RunesMainWidget.hpp  RunesWidget.hpp  debug.hpp  kTfbSpyroTag_DecoID.hpp  kTfbSpyroTag_HatType.hpp  kTfbSpyroTag_ToyType.hpp  kTfbSpyroTag_TrinketType.hpp  kTfbSpyroTag_VillainType.hpp  toydata.hpp
include/hardware/: HardwareIds.hpp  HardwareInterface.hpp  PortalDriver.hpp  WinHidUsbInterface.hpp
source/: Constants.cpp  Constants.hpp  EElementType.hpp  Events.hpp  FigureTabWidget.cpp  FigureTabWidget.hpp  HeroicsNames.cpp  HeroicsNames.hpp  PortalAlgos.cpp  PortalAlgos.hpp  PortalDebuggerWidget.cpp  PortalDebuggerWidget.hpp  PortalTag.cpp  PortalTag.hpp  PortalTagAsserts.inc  RfidTag.cpp  RfidTag.hpp  RunesDebug.hpp  RunesMainWidget.cpp  RunesMainWidget.hpp  RunesWidget.cpp  debug.cpp  kTfbSpyroTag_HatType.cpp  kTfbSpyroTag_ToyType.hpp  kTfbSpyroTag_TrinketType.cpp  kTfbSpyroTag_TrinketType.hpp  kTfbSpyroTag_VillainType.hpp  main.cpp  toydata.cpp  toydata.hpp
source/hardware/: HardwareIds.hpp  HardwareInterface.cpp  HardwareInterface.hpp  HidUsbInterface.cpp  HidUsbInterface.hpp  LibUsbInterface.cpp  LibUsbInterface.hpp  PortalDriver.cpp  PortalDriver.hpp  PortalType.hpp  WinHidUsbInterface.cpp
